# RCOUNT

./: .gitignore  Cargo.toml  README.md  repo-map.toml
.cargo/: config.local.example.toml
.claude/skills/rcount-pulse/: SKILL.md
.claude/skills/rcount-wave/: SKILL.md
.github/workflows/: ci.yml
.roles/: ROLE.md
.roles/parliament/: audit-replay-auditor.md  count-evidence-steward.md  package-bridge-reviewer.md
context/waves/: PHASES.md
context/waves/2026-05-15-rcount-foundation/: WAVE.md
context/waves/2026-05-15-rcount-foundation/pulses/: pulse-01.md
crates/rcount-audit/: Cargo.toml
crates/rcount-audit/examples/: write_summary_basic_transcript.rs
crates/rcount-audit/src/: lib.rs
crates/rcount-cli/: Cargo.toml
crates/rcount-cli/src/: main.rs
crates/rcount-cli/tests/: verify_cli.rs
crates/rcount-core/: Cargo.toml
crates/rcount-core/src/: lib.rs
crates/rcount-district/: Cargo.toml
crates/rcount-district/examples/: district_aggregation_rplan.rs  multi_election_harness.rs  multi_election_negative_harnesses.rs
crates/rcount-district/src/: lib.rs
crates/rcount-io/: Cargo.toml
crates/rcount-io/examples/: bad_california_rla_package.rs  bad_colorado_rla_package.rs  bad_cvr_summary_package.rs  bad_lineage_package.rs  bad_manual_audit_package.rs  bad_rla_discrepancy_package.rs  bad_rla_margin_package.rs  bad_rla_replay_package.rs  bad_rla_statistical_package.rs  bad_rla_stopping_package.rs  bad_selection_sum_package.rs  california_rla_package.rs  canvass_correction_package.rs  choice_bearing_proof_package.rs  colorado_rla_package.rs  cvr_summary_package.rs  mail_batch_added_package.rs  manual_audit_package.rs  missing_batch_package.rs  precinct_split_lineage_package.rs  privacy_inclusion_sketch_package.rs  rla_discrepancy_package.rs  rla_margin_package.rs  rla_replay_package.rs  rla_statistical_package.rs  rla_stopping_package.rs  summary_basic_package.rs
crates/rcount-io/src/: lib.rs
crates/rcount-rhist/: Cargo.toml
crates/rcount-rhist/src/: lib.rs
crates/rcount-stats/: Cargo.toml
crates/rcount-stats/src/: lib.rs
docs/fixtures/rctx/: README.md
docs/fixtures/rctx/l0-shared-context/: manifest.json
docs/fixtures/rctx/l0-shared-context/claims/: claim-boundary.json
docs/fixtures/rctx/l0-shared-context/graphs/: graphs.ndjson
docs/fixtures/rctx/l0-shared-context/proofs/: package-hashes.json
docs/fixtures/rctx/l0-shared-context/sources/: source-index.json  syn-precincts.csv
docs/fixtures/rctx/l0-shared-context/transcripts/: verify-transcript.json
docs/fixtures/rctx/l0-shared-context/units/: context-units.ndjson
docs/fixtures/rhist/: README.md
docs/fixtures/rhist/l0-missing-unit/: expected-verifier.json  manifest.json
docs/fixtures/rhist/l0-missing-unit/claims/: claim-boundary.json
docs/fixtures/rhist/l0-missing-unit/contexts/: context-index.ndjson
docs/fixtures/rhist/l0-missing-unit/proofs/: package-hashes.json
docs/fixtures/rhist/l0-missing-unit/units/: cycles.ndjson  lineage-events.ndjson
docs/fixtures/rhist/l0-rename/: expected-verifier.json  manifest.json
docs/fixtures/rhist/l0-rename/claims/: claim-boundary.json
docs/fixtures/rhist/l0-rename/proofs/: package-hashes.json
docs/fixtures/rhist/l0-rename/sources/: source-index.json  syn-2024-precincts.csv  syn-2028-precincts.csv  syn-rename-notice.txt
docs/fixtures/rhist/l0-rename/units/: lineage-events.ndjson
docs/fixtures/rhist/l1-bad-weights/: expected-verifier.json  manifest.json
docs/fixtures/rhist/l1-bad-weights/claims/: claim-boundary.json
docs/fixtures/rhist/l1-bad-weights/contexts/: context-index.ndjson
docs/fixtures/rhist/l1-bad-weights/proofs/: package-hashes.json
docs/fixtures/rhist/l1-bad-weights/sources/: source-index.json  syn-2024-precincts.csv
docs/fixtures/rhist/l1-bad-weights/units/: crosswalks.ndjson  cycles.ndjson  lineage-events.ndjson
docs/fixtures/rhist/l1-split-merge/: manifest.json
docs/fixtures/rhist/l1-split-merge/claims/: claim-boundary.json
docs/fixtures/rhist/l1-split-merge/proofs/: package-hashes.json
docs/fixtures/rhist/l1-split-merge/sources/: source-index.json  syn-2028-precincts.csv
docs/fixtures/rhist/l1-split-merge/units/: crosswalks.ndjson
docs/fixtures/rhist/l2-three-cycle/: manifest.json
docs/fixtures/rhist/l2-three-cycle/claims/: claim-boundary.json
docs/fixtures/rhist/l2-three-cycle/contexts/: context-index.ndjson
docs/fixtures/rhist/l2-three-cycle/proofs/: package-hashes.json
docs/fixtures/rhist/l2-three-cycle/sources/: source-index.json  syn-2024-precincts.csv  syn-2026-precincts.csv  syn-2026-rename-notice.txt  syn-2028-precinct-change-notice.txt  syn-2028-precincts.csv
docs/fixtures/rhist/l2-three-cycle/units/: crosswalks.ndjson  cycles.ndjson  lineage-events.ndjson
docs/fixtures/rhist/real-ri-tract-unchanged/: expected-verifier.json  manifest.json
docs/specs/: rcount-foundation.md
(+11 files in other folders)
