[workspace]
members = [
    "crates/rcount-core",
    "crates/rcount-stats",
    "crates/rcount-io",
    "crates/rcount-audit",
    "crates/rcount-district",
    "crates/rcount-cli",
    "crates/rcount-rhist",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Gio Della-Libera"]
license = "MIT"
repository = "https://github.com/giodl73-repo/RCOUNT"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
csv = "1"
rayon = "1.10"
rctx-core = { path = "../RLINE/crates/rctx-core" }
rhist-core = { path = "../RLINE/crates/rhist-core" }
rplan-core = { path = "../RPLAN/crates/rplan-core" }
rplan-io = { path = "../RPLAN/crates/rplan-io" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"

