[workspace]
members = [
    "crates/rcount-core",
    "crates/rcount-stats",
    "crates/rcount-io",
    "crates/rcount-audit",
    "crates/rcount-district",
    "crates/rcount-cli",
    "crates/rcount-rhist",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Gio Della-Libera"]
license = "MIT"
repository = "https://github.com/giodl73-repo/RCOUNT"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
csv = "1"
rayon = "1.10"
rctx-core = { git = "https://github.com/giodl73-repo/RLINE.git", package = "rctx-core", branch = "master" }
rhist-core = { git = "https://github.com/giodl73-repo/RLINE.git", package = "rhist-core", branch = "master" }
rplan-core = { git = "https://github.com/giodl73-repo/RPLAN.git", package = "rplan-core", branch = "master" }
rplan-io = { git = "https://github.com/giodl73-repo/RPLAN.git", package = "rplan-io", branch = "master" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"

